# polymarket-btc-takehome

./: .gitignore  Dockerfile  EVALUATION.md  README.md  pyproject.toml  replay.py  requirements.txt
configs/: demo_momentum.json
evidence/live_1h_demo/: SUMMARY.md  report.json
examples/: codex_gpt_55_model_submission.py  model_submission.py
model_submissions/dual_feed_momentum/: WRITEUP.md  config.json  model_submission.py
model_submissions/reference_momentum/: WRITEUP.md  config.json  model_submission.py
models/: baseline_models.py
scripts/: reconcile_resolutions.py  record_fixture.py  run_baseline.py  run_candidate.py  run_official_evaluation.py  scan_submission.py  soak_validate.py  synthesize_fixture.py  validate_live_run.py
src/polybench/: __init__.py  _utils.py  baselines.py  cli.py  harness.py  market.py  metrics.py  model.py  pnl.py  pricefeed.py  reconciliation.py  recorder.py  replay.py  reporting.py  submission_scan.py
tests/: conftest.py  test_dual_feed_example.py  test_harness_smoke.py  test_live_run_validation.py  test_market_parse.py  test_metrics.py  test_official_evaluation.py  test_pnl.py  test_pricefeed.py  test_reconciliation.py  test_reporting.py  test_submission_scan.py
tests/fixtures/: recorded_event.parquet  safe_submission.py  synthetic_event.parquet  unsafe_submission.py
