[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polybench"
version = "0.1.0"
description = "Take-home harness: paper-trade a submitted Model against live Polymarket 5-minute BTC up/down events."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "polybench" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "websockets>=14",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
polybench = "polybench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polybench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
